# deck

./: CLAUDE.md  index.html  package.json  pnpm-lock.yaml
docs/: DECISIONS.md  PRD.md  ROADMAP.md
spike/: README.md  index.html  package.json  pnpm-lock.yaml
spike/fixtures/: pr-847.diff
spike/src/: App.tsx  annotations.ts  fixtures.ts  styles.css
spike/src-tauri/: Cargo.toml  tauri.conf.json
spike/src-tauri/src/: main.rs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial.sql  0002_review_state.sql
src-tauri/src/: agent.rs  git.rs  lib.rs
src/adapters/: claude.test.ts  claude.ts
src/components/: AnnotationCard.tsx  BranchPicker.tsx  ChatSidebar.tsx  CommandPalette.tsx  DiffOverview.tsx  PanelRail.tsx
src/contexts/: ActivePanel.tsx  CommandRegistry.tsx  Theme.tsx  Worktree.tsx
src/hooks/: useAnnotations.ts  usePanelCommands.ts
src/lib/: aiReview.test.ts  aiReview.ts  db.ts  diffSummary.test.ts  diffSummary.ts  git.ts  highlighter.ts  promptTemplates.test.ts  promptTemplates.ts  selfReview.test.ts  selfReview.ts
src/panels/: DiffPanel.tsx
