[package]
name = "deck"
version = "0.1.0"
description = "Deck — personal AI development environment"
authors = ["Felix"]
edition = "2021"

[lib]
name = "deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2.4", features = ["sqlite"] }
tauri-plugin-shell = "2"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time", "macros", "process"] }

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }

